# au-health-backend

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  development.yaml  docker.yml  local.yaml  production.yaml
migrations/: 20210908205254_user.sql  20210916223943_survey.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/auth/: authentication.rs  cookie.rs  mod.rs  session.rs
src/domain/: mod.rs  survey.rs  user.rs  user_registration.rs
src/domain/question/: mod.rs
src/domain/survey/: mod.rs  new_survey.rs  new_survey_response.rs
src/domain/user/: mod.rs  registration.rs  role.rs
src/gql/: context.rs  mod.rs  schema.rs
src/gql/resolvers/: mod.rs  question.rs  survey.rs  system.rs  user.rs
src/session/: cookie.rs  manager.rs  mod.rs
tests/: health_check.rs  user.rs
tests/api/: health_check.rs  main.rs
tests/api/gql/: gql_schema.rs  schema.graphql
tests/api/helpers/: mod.rs  requests.rs  test_app.rs  user.rs
tests/api/survey/: create_survey_response.rs  mod.rs
tests/api/user/: login.rs  logout.rs  mod.rs  register.rs
tests/gql/: gql_schema.rs  mod.rs  schema.graphql  schema.rs
tests/helpers/: init.rs  mod.rs  requests.rs  test_app.rs
