[package]
name = "au-health-backend"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.3"
async-graphql = {version = "2.9.14", features = ["chrono", "uuid"]}
slab = "0.4.4"
tokio = { version = "1.11.0", features = ["macros", "time", "rt-multi-thread"] }
uuid = {version = "0.8.2", features = ["serde","v4"]}
chrono = "0.4.19"
fake = "2.4.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]