[package]
name = "au-health-backend"
version = "0.1.0"
authors = ["Matt Wilkinson <mattwilki17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "au-health-backend"


[dependencies]
axum = {version = "0.3.1", features = ["headers"]}
async-graphql = {version = "2.11.1", features = ["chrono", "uuid"]}
slab = "0.4.4"
tokio = { version = "1.11.0", features = ["macros", "time", "rt-multi-thread"] }
uuid = {version = "0.8.2", features = ["serde","v4"]}
chrono = "0.4.19"
fake = "2.4.1"
serde = { version="1", features = ["derive"] }
serde-aux = "3.0.1"
config = "0.11.0"
tracing = "0.1.26"
hyper = "0.14.12"
argon2 = "0.3.1"
async-session = "3.0.0"
async-redis-session = "0.2.2"
headers = "0.3.4"
async-trait = "0.1.51"
http = "0.2.4"
async-graphql-axum = "4.0.5"
validator = "0.14.0"
unicode-segmentation = "1.8.0"
futures = "0.3.17"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "offline",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
cynic = {version = "0.15.0", features = ["reqwest"]}
reqwest = {version = "0.11.4", features = ["json", "rustls-tls", "cookies"]}
regex = "1.5.4"
claim = "0.5.0"